Fix CLickthrough on Footer when overlapping menu

--- a/docs/css/hm.css
+++ b/docs/css/hm.css
@@ -142,6 +142,7 @@ body {
 .bottomFooter{
   padding-top: 250px;
   position: inherit;
+  pointer-events: none;
 }
 #modifiedDate{
   max-width: 1000px;
